@@ -1,13 +1,20 @@
+Thu Jun 17 19:16:55 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>
+
+        * DAnCE/NodeManager/Node_Manager_Module.h:
+        * DAnCE/NodeManager/Node_Manager_Module.cpp:
+
+          Store a reference in the POA in the property map. 
+
 Thu Jun 17 19:15:04 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>
 
         * DAnCE/DAnCE/DAnCE_Properties.idl:
-          
-          Added property to indentify the entity POA. 
+
+          Added property to indentify the entity POA.
 
         * DAnCE/DAnCE/DAnCE_Utility.h:
         * DAnCE/DAnCE/DAnCE_Utility.tpp:
 
-          Added a utility method to extract exceptions from an Any. 
+          Added a utility method to extract exceptions from an Any.
 
 Thu Jun 17 15:34:10 UTC 2010  Martin Corino  <mcorino@remedy.nl>
 
